kubernetes/staging/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gpets-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - "staging.gpets.online"
      secretName: gpets-tls-secret
  rules:
    - host: "staging.gpets.online"
      http:
        paths:
          - path: /
            backend:
              serviceName: gpets-web-service
              servicePort: 3000
